--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "server": "webpack --config webpackServer.js",
+    "client": "webpack --config webpackClient.js",
+    "webpack": "rimraf dist && npm run server && npm run client"
   },
   "dependencies": {
     "@nestjs/common": "^6.0.0",
@@ -24,7 +27,14 @@
     "@nestjs/platform-express": "^6.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
-    "rxjs": "^6.3.3"
+    "rxjs": "^6.3.3",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.2.1",
+    "vue-router": "^3.1.2",
+    "vue-server-renderer": "^2.6.10",
+    "vuex": "^3.1.1",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
@@ -32,10 +42,13 @@
     "@types/jest": "24.0.11",
     "@types/node": "11.13.4",
     "@types/supertest": "2.0.7",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "jest": "24.7.1",
     "prettier": "1.17.0",
     "supertest": "4.0.2",
     "ts-jest": "24.0.2",
+    "ts-loader": "^6.0.4",
     "ts-node": "8.1.0",
     "tsc-watch": "2.2.1",
     "tsconfig-paths": "3.8.0",
